[package]
name = "vm-memory"
version = "0.16.1"
description = "Safe abstractions for accessing the VM physical memory"
keywords = ["memory"]
categories = ["memory-management"]
authors = ["Liu Jiang <gerry@linux.alibaba.com>"]
repository = "https://github.com/rust-vmm/vm-memory"
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"
autobenches = false

[features]
default = ["rawfd"]
backend-bitmap = []
backend-mmap = ["dep:libc"]
backend-atomic = ["arc-swap"]
rawfd = ["dep:libc"]
xen = ["backend-mmap", "bitflags", "vmm-sys-util"]

[dependencies]
libc = { version = "0.2.39", optional = true }
arc-swap = { version = "1.0.0", optional = true }
bitflags = { version = "2.4.0", optional = true }
thiserror = "2.0.12"
vmm-sys-util = { version = "0.14.0", optional = true }

[target.'cfg(target_family = "windows")'.dependencies.winapi]
version = "0.3"
features = ["errhandlingapi", "sysinfoapi"]

[dev-dependencies]
criterion = "0.6.0"
matches = "0.1.0"
vmm-sys-util = "0.14.0"

[[bench]]
name = "main"
harness = false

[profile.bench]
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
