[package]
name = "vm-memory"
version = "0.17.2"
description = "Safe abstractions for accessing the VM physical memory"
keywords = ["memory"]
categories = ["memory-management"]
authors = ["Liu Jiang <gerry@linux.alibaba.com>"]
repository = "https://github.com/rust-vmm/vm-memory"
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"
autobenches = false

[features]
default = ["rawfd"]
backend-bitmap = ["vm-memory-new/backend-bitmap"]
backend-mmap = ["vm-memory-new/backend-mmap"]
backend-atomic = ["vm-memory-new/backend-atomic"]
rawfd = ["vm-memory-new/rawfd"]
xen = ["vm-memory-new/xen"]

[dependencies.vm-memory-new]
package = "vm-memory"
version = "0.18.0"
default-features = false

[dev-dependencies]
criterion = "0.7.0"
matches = "0.1.0"
vmm-sys-util = "0.15.0"

[[bench]]
name = "main"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
